--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -25,6 +25,7 @@ Vagrant.configure("2") do |config|
     config.vm.provision "shell", inline: <<-SHELL
         sudo apt update
         sudo apt install build-essential -y
+        sudo apt install curl vim -y
     SHELL
 
     # Configure Firewall
