--- a/java/producer/build.gradle
+++ b/java/producer/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'org.springframework.boot' version '3.1.1'
+    id 'eclipse'
 }
 
 version = '0.0.1-SNAPSHOT'
@@ -26,6 +27,17 @@ dependencies {
 	testImplementation 'io.projectreactor:reactor-test'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
+}
+
+sourceSets {
+    main {
+        java {
+            srcDir('src/main/java')
+        }
+        resources {
+            srcDir('src/main/resources')
+        }
+    }
 }
