--- a/java/producer/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/java/producer/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,9 +1,14 @@
 {
     "properties": [
         {
-            "name": "spring.kafka.producer.bootstrap-server",
+            "name": "spring.kafka.bootstrap-server",
             "type": "java.lang.String",
             "description": "The Kafka bootstrap server"
+        },
+        {
+            "name": "spring.kafka.producer.topic",
+            "type": "java.lang.String",
+            "description": "The Kafka topic to publish to"
         }
     ]
 }
